main tag is set to flex in order to align items correctly

--- a/card-component-homework/src/App.css
+++ b/card-component-homework/src/App.css
@@ -35,3 +35,10 @@ a {
   width: 300px;
   height: 500px;
 }
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top: 20px;
+}
